kitemviews: Prevent crash when dragging details side padding header

Calling createRolePixmap() while roleIndex is < 0 (which is the case for
the header side padding) would cause access to a negative index of a
vector, so exit the function before so and do nothing.

BUG: 511057


(cherry picked from commit acb6493da09f6df31897b266341978fcc7fddce5)

fd9bf3cd Prevent crash when dragging header side padding

Co-authored-by: Carlos Aurelio <kde@carlosaurelio.net>